# 2021-advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: aoc-ci-build.yml
input/: 24-commented.txt
practice/2020/: 2021-001.cpp
practice/2020/rust/: 01_fmt.rs  aoc_2020_002_password_rules.rs  aoc_2020_003_trees.rs
practice/general/rust/: Cargo.toml
practice/general/rust/src/: 02_list.rs
practice/rust/: 00_hello.rs  aoc_2020_001.rs  aoc_2020_002.rs  aoc_2020_002_password_rules.rs  aoc_2020_003_trees.rs
prototypes/: 18_snailfish_prototype.py  21_dirac_dice_protoype.py
