[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex       = "1"
structopt   = "0.3.13"              # 21st century CLIs.
indicatif   = "0.16.2"              # Pretty progress bars and tickers.
lazy_static = "*"                   # Lazy static variables, such as regexes.