[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
regex       = "1"
structopt   = "0.3.13"              # 21st century CLIs.
indicatif   = "0.16.2"              # Pretty progress bars and tickers.
lazy_static = "*"                   # Lazy static variables, such as regexes.
nalgebra    = "0.27"                # Linear algebra tools, e.g., SVD.
ndarray     = "0.15.0"              # n-dimensional array
ndarray-stats = "0.5"               # Statistical stuff like median, percentiles, etc.
noisy_float = "0.2.0"               # Needed for NaN-free floats in Rust, since we need the NaN-free-ness to allow a
                                    # total ordering for statistical operations.
nom         =   "7"                 # Parser combinator - parse stuff safely without painful hand-cranking.