[package]
name = "rust"
version = "0.1.0"
edition = "2021"



[dependencies]
image       = "0.23.14"             # image loading and simple box filters
ndarray     = "0.15.0"              # n-dimensional array
ndarray-stats = "0.5"               # Statistical stuff like median, percentiles, etc.
noisy_float = "0.2.0"               # Needed for NaN-free floats in Rust, since we need the NaN-free-ness to allow a
                                    # total ordering for statistical operations.


# Misc junk we don't *really* need
# opencv      = "0.21"                # Basically just bindings for C++ OpenCV - we just want highgui for quick debugging.